...
                        modifier = Modifier
                            .size(30.dp)
                            .border(3.dp, MaterialTheme.colorScheme.primaryContainer, CircleShape)
                            .padding(3.dp)
                            .clip(CircleShape)
                            .background(Color(mainUIState.paintColor))
                            .clearAndSetSemantics { contentDescription = "Color Dialog Button" }
                    )
                }
                IconButton(onClick = { onFillClick(mainUIState.paintColor) }) {
                    Icon(
                        painter = painterResource(id = R.drawable.bucket_fill_24),
                        contentDescription = "Fill Icon Button",
...
//    val fieldPoints = getDrawState().fieldPoints
    val bitmapColors = getDrawState().bitmapColors

    val paintSize = 1f
    Canvas(
        modifier = Modifier
            .clearAndSetSemantics { contentDescription = "Drawing Canvas" }
            .size(fieldSizeDp)
            .scale(fieldScale)
            .clipToBounds()
            .pointerInteropFilter { event ->
                when (event.action) {
                    MotionEvent.ACTION_DOWN -> {
...
